fixed flex wrap bug for albums

--- a/frontend/src/components/AlbumsComponent/AlbumsComponent.css
+++ b/frontend/src/components/AlbumsComponent/AlbumsComponent.css
@@ -91,7 +91,7 @@
     margin-left: -10px;
     flex-wrap: wrap;
     list-style-type: none;
-    width: 95%;
+    width: 1560px;
 }
 
 .all-album-selections {
